--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			<br>
 			<div class="line footer-separator"> </div>
 			<section class="footer-description">
-				<img src="imagenes/wikimedia fund icono.png">
+				<img src="imagenes/wikimedia fund icono.PNG">
 				<p>Wikipedia es alojada por la <a href="#">Fundación Wikimedia</a>, una organización sin fines de lucro que también alberga una gama de otros proyectos.</p>
 			</section>
 			
@@ -203,7 +203,7 @@
 				<div class="footer-left-col">
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/commons icono.png">
+						<img src="imagenes/commons icono.PNG">
 						<div class="footer-link-text">
 							<h3>Commons</h3>
 							<p>Fotos libremente utilizables y más</p>
@@ -212,7 +212,7 @@
 					</div>
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/wikilibros.png">
+						<img src="imagenes/wikilibros.PNG">
 						<div class="footer-link-text">
 							<h3>Wikilibros</h3>
 							<p>Libros de contenido libre</p>
@@ -221,7 +221,7 @@
 					</div>
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/wikiversidad.png">
+						<img src="imagenes/wikiversidad.PNG">
 						<div class="footer-link-text">
 							<h3>Wikiversidad</h3>
 							<p>Plataforma educativa libre</p>
@@ -230,7 +230,7 @@
 					</div>
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/wikisource.png">
+						<img src="imagenes/wikisource.PNG">
 						<div class="footer-link-text">
 							<h3>Wikisource</h3>
 							<p>La biblioteca libre</p>
@@ -241,7 +241,7 @@
 				<div class="footer-center-col">
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/wikiviajes.png">
+						<img src="imagenes/wikiviajes.PNG">
 						<div class="footer-link-text">
 							<h3>Wikiviajes</h3>
 							<p>La guía de viejes libre</p>
@@ -250,7 +250,7 @@
 					</div>
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/wikinoticias.png">
+						<img src="imagenes/wikinoticias.PNG">
 						<div class="footer-link-text">
 							<h3>Wikinoticias</h3>
 							<p>La fuente de noticias libre</p>
@@ -259,7 +259,7 @@
 					</div>
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/wikiquote.png">
+						<img src="imagenes/wikiquote.PNG">
 						<div class="footer-link-text">
 							<h3>Wikiquote</h3>
 							<p>La colección de citas</p>
@@ -268,7 +268,7 @@
 					</div>
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/wikispecies.png">
+						<img src="imagenes/wikispecies.PNG">
 						<div class="footer-link-text">
 							<h3>Wikispecies</h3>
 							<p>Directorio de especies libre</p>
@@ -279,7 +279,7 @@
 				<div class="footer-right-col">
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/wikcionario.png">
+						<img src="imagenes/wikcionario.PNG">
 						<div class="footer-link-text">
 							<h3>Wikcionario</h3>
 							<p>El diccionario libre</p>
@@ -288,7 +288,7 @@
 					</div>
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/wikidata.png">
+						<img src="imagenes/wikidata.PNG">
 						<div class="footer-link-text">
 							<h3>Wikidata</h3>
 							<p>Base del conocimiento libre</p>
@@ -297,7 +297,7 @@
 					</div>
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/mediawiki.png">
+						<img src="imagenes/mediawiki.PNG">
 						<div class="footer-link-text">
 							<h3>MediaWiki</h3>
 							<p>Aplicación libre y abierta</p>
@@ -306,7 +306,7 @@
 					</div>
 					<div class="footer-link-div">
 					<a href="#" class="footer-link">
-						<img src="imagenes/meta-wiki.png">
+						<img src="imagenes/meta-wiki.PNG">
 						<div class="footer-link-text">
 							<h3>Meta-Wiki</h3>
 							<p>Coordinación y documentación comunitaria</p>
