--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
 				<div class="app-description">
 					<p>Guarda tus articilos favoritos para leerlos sin conexión, sincroniza tus listas d lectura en varios dispositivos y personaliza tu experiencia de lectura con la aplicaición oficial de Wikipedia.</p>
 					<div class="apps-links">
-						<a href="#"><img src="imagenes/googleplay.png"></a>
-						<a href="#"><img src="imagenes/appstore.png"></a>
+						<a href="#"><img src="imagenes/googleplay.PNG"></a>
+						<a href="#"><img src="imagenes/appstore.PNG"></a>
 					</div>
 				</div>
 			</section>
